# poetry-and-colab

./: README.md  Using_python_poetry_in_Google_Colab.ipynb  pyproject.toml
