[tool.poetry]
name = "poetry-and-colab"
version = "0.1.0"
description = ""
authors = ["Elise"]
readme = "README.md"
packages = [{include = "poetry_and_colab"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
